# JITcompilerForge

./: .gitignore  LICENSE  README.md  architecture.md  pyproject.toml  requirements.txt
benchmarks/: stable_workload.py
configs/: default.yaml
forge/: __init__.py  config.py
forge/autotuner/: __init__.py  benchmark.py  candidate.py  search.py  tuner.py
forge/cache/: __init__.py  kernel_cache.py
forge/hotswap/: __init__.py  swap_manager.py
forge/kernels/: __init__.py  decode_attention.py  kernel_configs.py
forge/profiler/: __init__.py  profiler.py  workload_spec.py
forge/serving/: __init__.py  loop.py
forge/utils/: buckets.py
scripts/: run_server.py
tests/: test_config.py  test_profiler.py  test_serving_loop.py
